# OptimalDDR5

./: .gitignore  README.md  pyproject.toml  requirements.txt
config/: die_profiles.yaml  example_profiles.yaml  platform_profiles.yaml  power_model.yaml  timing_aliases.yaml  timing_definitions.yaml  voltage_profiles.yaml
frontend/: index.html  package-lock.json  package.json  vite.config.ts
frontend/public/data/: die_profiles.json  example_profiles.json  platform_profiles.json  power_model.json  timing_aliases.json  timing_definitions.json  voltage_profiles.json
frontend/src/: main.tsx  styles.css
frontend/src/lib/: api.ts  static-engine.ts  types.ts
scripts/: build_static_data.py
src/optimalddr5/: __init__.py
src/optimalddr5/api/: main.py
src/optimalddr5/core/: evaluator.py  formulas.py  hwinfo_report_log.py  models.py  power.py  recommendations.py
src/optimalddr5/data/: loader.py
tests/: test_evaluator.py  test_formulas.py  test_loader_hwinfo.py  test_power.py
