[project]
name = "optimalddr5"
version = "0.1.0"
description = "DDR5-only RAM timing analyzer with editable tuning data."
requires-python = ">=3.12"
dependencies = [
  "fastapi>=0.115",
  "starlette>=0.40",
  "uvicorn[standard]>=0.30",
  "pydantic>=2.8",
  "pyyaml>=6.0",
  "python-multipart>=0.0.9"
]

[project.optional-dependencies]
dev = [
  "pytest>=8.2",
  "httpx>=0.27"
]

[tool.pytest.ini_options]
pythonpath = ["src"]
testpaths = ["tests"]
addopts = "--basetemp=.pytest_tmp"

[build-system]
requires = ["setuptools>=69", "wheel"]
build-backend = "setuptools.build_meta"
